--- a/.github/workflows/release-windows-exe.yml
+++ b/.github/workflows/release-windows-exe.yml
@@ -89,6 +89,50 @@ jobs:
           Copy-Item -Path $zipName -Destination (Join-Path $env:RUNNER_TEMP $zipName) -Force
           "ZIP_NAME=$zipName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
+      - name: Build MSI (WiX)
+        if: github.event_name == 'release'
+        shell: pwsh
+        run: |
+          dotnet tool install --global wix
+          $env:PATH = "$env:USERPROFILE\\.dotnet\\tools;$env:PATH"
+
+          $tag = "${{ github.event.release.tag_name }}"
+          if ([string]::IsNullOrWhiteSpace($tag)) { $tag = "${{ github.ref_name }}" }
+          if ([string]::IsNullOrWhiteSpace($tag)) { $tag = "0.0.0" }
+          $ver = $tag.TrimStart('v','V')
+          $parts = $ver.Split('.')
+          if ($parts.Count -lt 3) { $ver = ($parts + @('0','0','0'))[0..2] -join '.' } else { $ver = $parts[0..2] -join '.' }
+
+          $msiName = "WeekNumApp-$tag-windows-x64.msi"
+          "MSI_NAME=$msiName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+          @"
+          <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+            <Package Name="WeekNumApp"
+                     Manufacturer="WeekNum"
+                     Version="$ver"
+                     UpgradeCode="D9AF0D14-4F9C-4F46-9E74-0B40E1F0E7F9"
+                     InstallScope="perUser"
+                     Compressed="yes" />
+
+            <MajorUpgrade DowngradeErrorMessage="A newer version of WeekNumApp is already installed." />
+            <MediaTemplate />
+
+            <StandardDirectory Id="UserProfileFolder">
+              <Component Id="WeekNumAppExe" Guid="*">
+                <File Id="WeekNumAppExeFile" Source="dist\WeekNumApp.exe" KeyPath="yes" />
+              </Component>
+            </StandardDirectory>
+
+            <Feature Id="Main" Level="1">
+              <ComponentRef Id="WeekNumAppExe" />
+            </Feature>
+          </Wix>
+          "@ | Set-Content -Encoding UTF8 installer.wxs
+
+          wix build installer.wxs -o $msiName
+          Copy-Item -Path $msiName -Destination (Join-Path $env:RUNNER_TEMP $msiName) -Force
+
       - name: Save ZIP to repo (latest_exe) and push to main
         if: github.event_name == 'release'
         shell: pwsh
@@ -99,6 +143,12 @@ jobs:
           if ([string]::IsNullOrWhiteSpace($zipName)) { throw "Missing ZIP_NAME" }
           $zipPath = Join-Path $env:RUNNER_TEMP $zipName
           if (!(Test-Path $zipPath)) { throw "ZIP not found: $zipPath" }
+          $msiName = "${{ env.MSI_NAME }}"
+          $msiPath = $null
+          if (-not [string]::IsNullOrWhiteSpace($msiName)) {
+            $msiPath = Join-Path $env:RUNNER_TEMP $msiName
+            if (!(Test-Path $msiPath)) { throw "MSI not found: $msiPath" }
+          }
 
           git fetch origin main
           git checkout -B main origin/main
@@ -106,8 +156,13 @@ jobs:
           New-Item -ItemType Directory -Force -Path "latest_exe" | Out-Null
           $dest = "latest_exe\\$zipName"
           Copy-Item -Path $zipPath -Destination $dest -Force
+          if ($null -ne $msiPath) {
+            $destMsi = "latest_exe\\$msiName"
+            Copy-Item -Path $msiPath -Destination $destMsi -Force
+          }
 
           git add $dest
+          if ($null -ne $msiPath) { git add $destMsi }
           git status --porcelain
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -120,6 +175,7 @@ jobs:
         with:
           files: |
             ${{ env.ZIP_NAME }}
+            ${{ env.MSI_NAME }}
           fail_on_unmatched_files: true
 
       - name: Upload workflow artifact
@@ -129,3 +185,4 @@ jobs:
           path: |
             dist/WeekNumApp.exe
             ${{ env.ZIP_NAME }}
+            ${{ env.MSI_NAME }}
