--- a/.github/workflows/release-windows-exe.yml
+++ b/.github/workflows/release-windows-exe.yml
@@ -112,21 +112,22 @@ jobs:
                      Manufacturer="WeekNum"
                      Version="$ver"
                      UpgradeCode="D9AF0D14-4F9C-4F46-9E74-0B40E1F0E7F9"
-                     InstallScope="perUser"
-                     Compressed="yes" />
+                     Scope="perUser"
+                     Compressed="yes">
 
-            <MajorUpgrade DowngradeErrorMessage="A newer version of WeekNumApp is already installed." />
-            <MediaTemplate />
+              <MajorUpgrade DowngradeErrorMessage="A newer version of WeekNumApp is already installed." />
+              <MediaTemplate />
 
-            <StandardDirectory Id="UserProfileFolder">
-              <Component Id="WeekNumAppExe" Guid="*">
-                <File Id="WeekNumAppExeFile" Source="dist\WeekNumApp.exe" KeyPath="yes" />
-              </Component>
-            </StandardDirectory>
+              <StandardDirectory Id="UserProfileFolder">
+                <Component Id="WeekNumAppExe" Guid="*">
+                  <File Id="WeekNumAppExeFile" Source="dist\WeekNumApp.exe" KeyPath="yes" />
+                </Component>
+              </StandardDirectory>
 
-            <Feature Id="Main" Level="1">
-              <ComponentRef Id="WeekNumAppExe" />
-            </Feature>
+              <Feature Id="Main" Level="1">
+                <ComponentRef Id="WeekNumAppExe" />
+              </Feature>
+            </Package>
           </Wix>
           "@ | Set-Content -Encoding UTF8 installer.wxs
 
