FIX: fixing workflow issue not generting msi

--- a/.github/workflows/release-windows-exe.yml
+++ b/.github/workflows/release-windows-exe.yml
@@ -162,7 +162,7 @@ jobs:
               <MajorUpgrade DowngradeErrorMessage="A newer version of WeekNumApp is already installed." />
               <MediaTemplate />
 
-              <StandardDirectory Id="UserProfileFolder">
+              <StandardDirectory Id="PersonalFolder">
                 <Component Id="WeekNumAppExe" Guid="*">
                   <File Id="WeekNumAppExeFile" Source="dist\WeekNumApp.exe" KeyPath="yes" />
                 </Component>
