REMOVE: eliminate ZIP saving step and related cleanup from release workflow

--- a/.github/workflows/release-windows-exe.yml
+++ b/.github/workflows/release-windows-exe.yml
@@ -51,35 +51,6 @@ jobs:
           Copy-Item -Path $zipName -Destination (Join-Path $env:RUNNER_TEMP $zipName) -Force
           "ZIP_NAME=$zipName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-      - name: Save ZIP to repo (latest_exe) and push to target branch
-        if: github.event_name == 'release'
-        shell: pwsh
-        run: |
-          $tag = "${{ github.event.release.tag_name }}"
-          if ([string]::IsNullOrWhiteSpace($tag)) { throw "Missing release tag name" }
-          $zipName = "${{ env.ZIP_NAME }}"
-          if ([string]::IsNullOrWhiteSpace($zipName)) { throw "Missing ZIP_NAME" }
-          $zipPath = Join-Path $env:RUNNER_TEMP $zipName
-          if (!(Test-Path $zipPath)) { throw "ZIP not found: $zipPath" }
-
-          $target = "${{ github.event.release.target_commitish }}"
-          if ([string]::IsNullOrWhiteSpace($target)) { $target = "main" }
-          if (@("main","dev") -notcontains $target) { throw "Unsupported target branch: $target" }
-
-          git fetch origin $target
-          git checkout -B $target "origin/$target"
-
-          New-Item -ItemType Directory -Force -Path "latest_exe" | Out-Null
-          $dest = "latest_exe\\$zipName"
-          Copy-Item -Path $zipPath -Destination $dest -Force
-
-          git add $dest
-          git status --porcelain
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git commit -m "Add $zipName (release artifact)" || exit 0
-          git push origin "HEAD:$target"
-
       - name: Upload artifacts to Release
         if: github.event_name == 'release'
         uses: softprops/action-gh-release@v2
@@ -88,10 +59,8 @@ jobs:
             ${{ env.ZIP_NAME }}
           fail_on_unmatched_files: true
 
-      - name: Upload workflow artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: WeekNumApp-windows-exe
-          path: |
-            dist/WeekNumApp.exe
-            ${{ env.ZIP_NAME }}
+      - name: Cleanup build artifacts
+        if: always()
+        shell: pwsh
+        run: |
+          Remove-Item -Recurse -Force -ErrorAction SilentlyContinue "build", "dist", "__pycache__", "installer.wxs"
