--- a/.github/workflows/release-windows-exe.yml
+++ b/.github/workflows/release-windows-exe.yml
@@ -61,6 +61,26 @@ jobs:
         run: |
           pyinstaller --noconsole --onefile --name WeekNumApp --clean --icon icons\WeekNum.ico --add-data "branding\weeknum_banner.png;branding" --add-data "icons\WeekNum.ico;icons" --version-file version_info.txt weeknum_app.py
 
+      - name: Name EXE (dev releases)
+        shell: pwsh
+        run: |
+          $eventName = "${{ github.event_name }}"
+          $tag = "${{ github.event.release.tag_name }}"
+          if ([string]::IsNullOrWhiteSpace($tag)) { $tag = "${{ github.ref_name }}" }
+          if ([string]::IsNullOrWhiteSpace($tag)) { $tag = "0.0.0" }
+          $ver = $tag.TrimStart("v", "V")
+
+          $target = "${{ github.event.release.target_commitish }}"
+          if ([string]::IsNullOrWhiteSpace($target)) { $target = "${{ github.ref_name }}" }
+
+          $exeName = "WeekNumApp.exe"
+          if ($eventName -eq "release" -and $target -eq "dev") {
+            $exeName = "WeekNumApp_dev$ver.exe"
+            Rename-Item -Path "dist\\WeekNumApp.exe" -NewName $exeName -Force
+          }
+
+          "EXE_NAME=$exeName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
       - name: Package (zip)
         shell: pwsh
         run: |
@@ -68,7 +88,7 @@ jobs:
           if ([string]::IsNullOrWhiteSpace($tag)) { $tag = "${{ github.ref_name }}" }
           if ([string]::IsNullOrWhiteSpace($tag)) { $tag = "${{ github.run_number }}" }
           $zipName = "WeekNumApp-$tag-windows-x64.zip"
-          Compress-Archive -Path "dist\\WeekNumApp.exe" -DestinationPath $zipName -Force
+          Compress-Archive -Path "dist\\${{ env.EXE_NAME }}" -DestinationPath $zipName -Force
           Copy-Item -Path $zipName -Destination (Join-Path $env:RUNNER_TEMP $zipName) -Force
           "ZIP_NAME=$zipName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
